Create View Data SQL Queries
Initialized javascript files in the utils folder
to perform CRUD operations.

view-data.js contains all read queries and then
displays the data as a table in the console.

Updated and fixed the schema.sql and seeds.sql as
there were bugs.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/TheInfamousGrim/sql-employee-tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "fs": "^0.0.1-security",
     "inquirer": "^9.1.2",
     "mysql2": "^2.3.3"
-  }
+  },
+  "type": "module"
 }
